# spectra

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
components/app/include/: app_config.h
components/board/: CMakeLists.txt
components/board/include/: board_config.h
components/drivers/: CMakeLists.txt  touch_driver.c
components/drivers/include/: display_driver.h
components/gui/: CMakeLists.txt
components/gui/assets/: dev_logo.c
components/gui/include/assets/: dev_logo.h
components/gui/include/screens/: main_screen.h  settings_screen.h  splash_screen.h
components/gui/include/widgets/: toolbar.h
components/gui/screens/: main_screen.c  settings_screen.c  splash_screen.c
components/gui/widgets/: toolbar.c
components/lvgl_port/: CMakeLists.txt  lvgl_port.c
components/lvgl_port/include/: lvgl_port.h
components/models/: CMakeLists.txt  settings_model.c  system_model.c
components/models/include/: settings_model.h  system_model.h
components/services/: CMakeLists.txt  gui_service.c  settings_service.c  storage_service.c  system_service.c
components/services/include/: settings_service.h  storage_service.h  system_service.h
main/: CMakeLists.txt  board_config.h  idf_component.yml  main.c
main/drivers/: display_driver.c  touch_driver.h
main/gui/: lvgl_port.c
main/gui/screens/: settings_screen.c
main/images/: logo_cpg.c  logo_cpg.h
main/services/: gui_service.c  gui_service.h
spiffs_data/: device_config.json
